--- a/Pages/quiz_Home.html
+++ b/Pages/quiz_Home.html
@@ -14,31 +14,31 @@
         <div class="icon-box">
             <img class="logoimg" src="../Arts/logo2_narutoQuiz.png" />
         </div>
-        <div class="link-box">
+        <nav class="link-box">
             <ol>
                 <li>
                     <a href="./quiz_Home.html">Home</a>
                 </li>
                 <li>
-                    <a>Placares</a>
+                    <a href="">Placares</a>
                 </li>
             </ol>
-        </div>
+        </nav>
     </header>
-    
+
     <container class="main-content">
 
         <div class="ttl-box">
             <h1>Dattebayo Quiz</h1>
         </div>
-        <div class="question-box hide">
+        <div id="question-box" class="question-box hide">
             <h1 id="qst-enun">A pergunta será exibida aqui !</h1>
         </div>
-        <div class="answers-box hide">
-            <button class="asw-btt hide">Resp 1</button>
-            <button class="asw-btt hide">Resp 2</button>
-            <button class="asw-btt hide">Resp 3</button>
-            <button class="asw-btt hide">Resp 4</button>
+        <div id="answers-box" class="answers-box hide">
+            <button class="asw-btt">Resp 1</button>
+            <button class="asw-btt">Resp 2</button>
+            <button class="asw-btt">Resp 3</button>
+            <button class="asw-btt">Resp 4</button>
         </div>
         <div class="controls-box">
             <button id="stt-btt" class="stt-btt ">Iniciar Quiz</button>
