Att-4 quizNaruto - > (Anime-quiz) 75%

--- a/Pages/quiz_Home.html
+++ b/Pages/quiz_Home.html
@@ -35,10 +35,10 @@
             <h1 id="qst-enun">A pergunta será exibida aqui !</h1>
         </div>
         <div id="answers-box" class="answers-box hide">
-            <button class="asw-btt">Resp 1</button>
-            <button class="asw-btt">Resp 2</button>
-            <button class="asw-btt">Resp 3</button>
-            <button class="asw-btt">Resp 4</button>
+            <button class="asw-btt answer">Resp 1</button>
+            <button class="asw-btt answer">Resp 2</button>
+            <button class="asw-btt answer">Resp 3</button>
+            <button class="asw-btt answer">Resp 4</button>
         </div>
         <div class="controls-box">
             <button id="stt-btt" class="stt-btt ">Iniciar Quiz</button>
