--- a/Pages/quiz_Home.html
+++ b/Pages/quiz_Home.html
@@ -11,6 +11,10 @@
 
 <body>
     <header class="cab-box">
+        ,<div class="ttl-cab">
+            <h1>Kage Quiz</h1>
+        </div>
+
         <div class="icon-box">
             <img class="logoimg" src="../Arts/logo2_narutoQuiz.png" />
         </div>
@@ -49,7 +53,7 @@
 
 
     <footer class="ftt-box">
-        <h2>Naruto Quiz | Dev by ©Wittallo Marcos</h2>
+        <h2> - Kage Quiz | Dev by ©Wittallo Marcos - </h2>
     </footer>
 
 
