Att- Pjquiz - EndGame function

--- a/Pages/quiz_Home.html
+++ b/Pages/quiz_Home.html
@@ -5,18 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Styles/quiz_Home.css">
-    <link rel="icon" href="../Arts/logo_narutoQuiz.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="../Arts/logo_QuizTab.png" >
     <title>Quiz-Home</title>
 </head>
 
 <body>
     <header class="cab-box">
-        ,<div class="ttl-cab">
-            <h1>Kage Quiz</h1>
-        </div>
 
         <div class="icon-box">
-            <img class="logoimg" src="../Arts/logo2_narutoQuiz.png" />
+            <img class="logoimg" src="../Arts/logo_Quiz1.png" />
         </div>
         <nav class="link-box">
             <ol>
