--- a/Pages/quiz_Home.html
+++ b/Pages/quiz_Home.html
@@ -27,6 +27,13 @@
         </nav>
     </header>
 
+    <container class="form-user-info hide">
+        <form class="form-1">
+            <label for="name"></label><input type="text" id="name" name="name" />
+            <label for="age"></label><input type="number" id="age" name="idade" />
+        </form>
+    </container>
+
     <container class="main-content">
 
         <div class="ttl-box">
