--- a/Pages/quiz_Home.html
+++ b/Pages/quiz_Home.html
@@ -14,7 +14,7 @@
     <header class="cab-box">
 
         <div class="icon-box">
-            <img class="logoimg" src="../Arts/logo2_quiz.png" />
+            <img class="logoimg" src="../Arts/Logo3-quizN.png" />
         </div>
         <nav class="link-box">
             <ol>
