--- a/Pages/quiz_Home.html
+++ b/Pages/quiz_Home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Styles/quiz_Home.css">
-    <link rel="icon" type="image/png" sizes="48x48" href="../Arts/logo_QuizTab.png">
+    <link rel="icon" type="image/png" sizes="500x500" href="../Arts/ninjaquiz-logo5 (1).png">
     <title>Quiz-Home</title>
 </head>
 
@@ -14,7 +14,7 @@
     <header class="cab-box">
 
         <div class="icon-box">
-            <img class="logoimg" src="../Arts/Logo3-quizN.png" />
+            <img class="logoimg" src="../Arts/ninjaquiz-logo5 (1).png" />
         </div>
         <nav class="link-box">
             <ol>
@@ -80,6 +80,7 @@
 
     <footer class="ftt-box">
         <h2> - Kage Quiz | Dev by ©Wittallo Marcos - </h2>
+        <p>Página para estudos, Quiz básico tema - Anime/Ninjas</p>
     </footer>
 
 
